Migrate PowerMock to Mockito in RestServiceTest (#2372)